# nep4_nostd_example

./: Cargo.toml  README.md  build.sh  package.json
res/: nep4_rs.wasm
src/: lib.rs
